# twitch_backup.local_db

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  re_exports.rs
src/entities/: mod.rs  prelude.rs  services.rs  status.rs  tasks.rs  users.rs  video_upload.rs  videos.rs
src/migrator/: m20230916_000001_create_users_table.rs  m20230916_000002_create_videos_table.rs  m20230916_000003_create_video_upload_table.rs  m20230916_000004_add_sample_data.rs  m20231015_000005_alter_videos_table_for_errors.rs  m20231029_000006_alter_video_uploads_table_for_youtube_id.rs  m20240509_000006_alter_users_table_for_timezone.rs  m20241011_000007_add_service_tables.rs  mod.rs
