[package]
name = "twba-local-db"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12"
tokio = { version = "1.33" , features = ["full"]}
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"

anyhow = { version = "1.0" , optional = true}
tracing-subscriber = { version = "0.3" ,optional = true}

[features]
build-binary = ["anyhow", "tracing-subscriber"]
re-exports-sea-orm = []
default = ["re-exports-sea-orm"]

[[bin]]
name = "twba-local-db"
required-features = ["build-binary"]

